--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"dotenv": "^16.4.7",
 		"express": "^4.21.2",
 		"multer": "^1.4.5-lts.1",
+		"nodemon": "^3.1.9",
 		"prisma": "^6.0.1",
 		"sharp": "^0.33.5"
 	}
